fixes #36 inject /server/info and /health into swagger
