# key/src/main/java/com/networknt/oauth/key/PathHandlerProvider.java
@@ -1,5 +1,7 @@
 package com.networknt.oauth.key;
 
+import com.networknt.health.HealthGetHandler;
+import com.networknt.info.ServerInfoGetHandler;
 import com.networknt.oauth.key.handler.Oauth2KeyKeyIdGetHandler;
 import com.networknt.server.HandlerProvider;
 import io.undertow.Handlers;
@@ -10,6 +12,8 @@ public class PathHandlerProvider implements HandlerProvider {
     @Override
     public HttpHandler getHandler() {
         HttpHandler handler = Handlers.routing()
+            .add(Methods.GET, "/v2/health", new HealthGetHandler())
+            .add(Methods.GET, "/v2/server/info", new ServerInfoGetHandler())
             .add(Methods.GET, "/oauth2/key/{keyId}", new Oauth2KeyKeyIdGetHandler())
         ;
         return handler;
